--- a/prototype_base.info.yml
+++ b/prototype_base.info.yml
@@ -2,7 +2,7 @@ name: Prototype Base
 description: 'In the beginning there was nothing, then came this prototype base. So install me first. This installs site config, image styles, and settings needed to install our prototype content and paragraph modules. '
 type: module
 core: 8.x
-package: Prototype
+package: 'Prototype Suite'
 dependencies:
   - action
   - automated_cron
@@ -47,8 +47,8 @@ dependencies:
   - menu_block
   - menu_link_content
   - menu_ui
-  - message
-  - message_notify
+#  - message
+#  - message_notify
   - metatag
   - module_filter
   - node
@@ -57,7 +57,7 @@ dependencies:
   - paragraphs
   - path
   - pathauto
-  - private_message
+#  - private_message
   - quickedit
   - reroute_email
   - rdf
@@ -67,7 +67,7 @@ dependencies:
   - robotstxt
   - scheduler
   - search
-  - share_everywhere
+#  - share_everywhere
   - statistics
   - syslog
   - tablefield
@@ -82,7 +82,7 @@ dependencies:
   - views
   - viewsreference
   - views_ui
-  - votingapi
-  - votingapi_widgets
+#  - votingapi
+#  - votingapi_widgets
   - webform
   - webform_ui
